force-app/main/default/objects/Contact/fields/Authentication_Type__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Type__c</fullName>
    <description>Singpass or Non-Singpass authentication method for the data subject.</description>
    <label>Authentication Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Singpass</fullName>
            </value>
            <value>
                <fullName>Non-Singpass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>