force-app/main/default/objects/Contact/fields/Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch Id</label>
    <referenceTo>Batch__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>