force-app/main/default/objects/Contact/fields/Can_Approve__c.field-meta.xml
<CustomField>
    <fullName>Can_Approve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>可审批</label>
    <type>Checkbox</type>
</CustomField>