force-app/main/default/objects/Contact/fields/Can_Send_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Can_Send_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>可发送提醒</label>
    <type>Checkbox</type>
</CustomField>