force-app/main/default/objects/Contact/fields/CBS_Download_Date__c.field-meta.xml
<CustomField>
    <fullName>CBS_Download_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CBS Download Date</label>
    <type>DateTime</type>
</CustomField>