force-app/main/default/objects/Contact/fields/CBS_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>CBS_Processing_Status__c</fullName>
    <label>CBS Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>