force-app/main/default/objects/Contact/fields/Client_ID_HMAC__c.field-meta.xml
<CustomField>
    <fullName>Client_ID_HMAC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client ID HMAC</label>
    <length>128</length>
    <type>Text</type>
</CustomField>