force-app/main/default/objects/Contact/fields/Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closure_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Closure Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>