force-app/main/default/objects/Contact/fields/Composite_Match_HMAC__c.field-meta.xml
<CustomField>
    <fullName>Composite_Match_HMAC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Composite Match HMAC</label>
    <length>128</length>
    <type>Text</type>
</CustomField>