force-app/main/default/objects/Contact/fields/Consent_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_Expiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consent Expiry Date</label>
    <type>Date</type>
</CustomField>