force-app/main/default/objects/Contact/fields/Consent_Link_Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_Link_Generated_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consent Link Generated Date</label>
    <type>DateTime</type>
</CustomField>