force-app/main/default/objects/Contact/fields/Consent_Revalidation_Status__c.field-meta.xml
<CustomField>
    <fullName>Consent_Revalidation_Status__c</fullName>
    <label>Consent Revalidation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>