force-app/main/default/objects/Contact/fields/Consent_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consent Start Date</label>
    <type>Date</type>
</CustomField>