force-app/main/default/objects/Contact/fields/Consent_Type__c.field-meta.xml
<CustomField>
    <fullName>Consent_Type__c</fullName>
    <description>Per-Report or Term-Based consent classification (formerly Contact Record Type).</description>
    <label>Consent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per-Report Consent</fullName>
            </value>
            <value>
                <fullName>Term-Based Consent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>