force-app/main/default/objects/Contact/fields/Consent_Validity_Status__c.field-meta.xml
<CustomField>
    <fullName>Consent_Validity_Status__c</fullName>
    <label>Consent Validity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>