force-app/main/default/objects/Contact/fields/Current_Consent_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Consent_Expiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>当前Consent到期日</label>
    <type>Date</type>
</CustomField>