force-app/main/default/objects/Contact/fields/Current_Consent_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Consent_Status__c</fullName>
    <label>当前Consent状态</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Authorized</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
                <default>true</default>
                <label>Not Approved</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Departure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>