force-app/main/default/objects/Contact/fields/Data_Quality_Status__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Status__c</fullName>
    <label>Data Quality Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>duplicate email</fullName>
                <isActive>false</isActive>
                <label>duplicate email</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>