force-app/main/default/objects/Contact/fields/Data_Subject_Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Data_Subject_Lifecycle_Stage__c</fullName>
    <label>Data Subject Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upload</fullName>
                <default>true</default>
                <label>Upload</label>
            </value>
            <value>
                <fullName>Consent Request</fullName>
            </value>
            <value>
                <fullName>Active Consent</fullName>
            </value>
            <value>
                <fullName>Consent Declined</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Report Request</fullName>
            </value>
            <value>
                <fullName>Report Fulfilment</fullName>
            </value>
            <value>
                <fullName>Consent Withdrawn</fullName>
            </value>
            <value>
                <fullName>Consent Expired</fullName>
            </value>
            <value>
                <fullName>Departure</fullName>
            </value>
            <value>
                <fullName>Consumed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>