force-app/main/default/objects/Contact/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>出生日期</label>
    <type>Date</type>
</CustomField>