force-app/main/default/objects/Contact/fields/Declined_Date__c.field-meta.xml
<CustomField>
    <fullName>Declined_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Declined Date</label>
    <type>DateTime</type>
</CustomField>