force-app/main/default/objects/Contact/fields/Departure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Departure_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Departure Reason</label>
    <type>TextArea</type>
</CustomField>