force-app/main/default/objects/Contact/fields/Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>不允许联系</label>
    <type>Checkbox</type>
</CustomField>