force-app/main/default/objects/Contact/fields/Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Sent Date</label>
    <type>DateTime</type>
</CustomField>