force-app/main/default/objects/Contact/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <label>Employment status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Existing Hire</fullName>
            </value>
            <value>
                <fullName>Pre-hire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>