force-app/main/default/objects/Contact/fields/Exception_Owner__c.field-meta.xml
<CustomField>
    <fullName>Exception_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exception Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contact_Exception_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>