force-app/main/default/objects/Contact/fields/Exception_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exception_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exception Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>