force-app/main/default/objects/Contact/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>全名</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>