force-app/main/default/objects/Contact/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>