force-app/main/default/objects/Contact/fields/ID_Number__c.field-meta.xml
<CustomField>
    <fullName>ID_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>证件号码</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>