force-app/main/default/objects/Contact/fields/Is_Active_Client_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Client_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>是否激活</label>
    <type>Checkbox</type>
</CustomField>