force-app/main/default/objects/Contact/fields/Last_Match_Error__c.field-meta.xml
<CustomField>
    <fullName>Last_Match_Error__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>最近匹配错误</label>
    <length>255</length>
    <type>Text</type>
</CustomField>