force-app/main/default/objects/Contact/fields/Last_Match_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Match_Status__c</fullName>
    <label>最近匹配状态</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Matched</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>