force-app/main/default/objects/Contact/fields/Latest_Consent_Status__c.field-meta.xml
<CustomField>
    <fullName>Latest_Consent_Status__c</fullName>
    <label>Latest Consent Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Active Consent</fullName>
            </value>
            <value>
                <fullName>Consent Declined</fullName>
            </value>
            <value>
                <fullName>Consent Withdrawn</fullName>
            </value>
            <value>
                <fullName>Consent Expired</fullName>
            </value>
            <value>
                <fullName>Consent Expired / Consumed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>