force-app/main/default/objects/Contact/fields/Latest_Submission_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Latest_Submission_Datetime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>最新提交时间</label>
    <type>DateTime</type>
</CustomField>