force-app/main/default/objects/Contact/fields/MyInfo_ID_HMAC__c.field-meta.xml
<CustomField>
    <fullName>MyInfo_ID_HMAC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MyInfo ID HMAC</label>
    <length>128</length>
    <type>Text</type>
</CustomField>