force-app/main/default/objects/Contact/fields/MyInfo_Retrieval_Status__c.field-meta.xml
<CustomField>
    <fullName>MyInfo_Retrieval_Status__c</fullName>
    <label>MyInfo Retrieval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>