force-app/main/default/objects/Contact/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nationality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>