force-app/main/default/objects/Contact/fields/NRIC_FIN_Number__c.field-meta.xml
<CustomField>
    <fullName>NRIC_FIN_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NRIC / FIN Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>