force-app/main/default/objects/Contact/fields/Portal_Role__c.field-meta.xml
<CustomField>
    <fullName>Portal_Role__c</fullName>
    <label>门户角色</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Approver</fullName>
            </value>
            <value>
                <fullName>Client Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>