force-app/main/default/objects/Contact/fields/Principal_Name__c.field-meta.xml
<CustomField>
    <fullName>Principal_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Principal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>