force-app/main/default/objects/Contact/fields/Registered_Address__c.field-meta.xml
<CustomField>
    <fullName>Registered_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Registered Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>