force-app/main/default/objects/Contact/fields/Reminder_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Review_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reminder Review Date</label>
    <type>Date</type>
</CustomField>