force-app/main/default/objects/Contact/fields/Report_Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Report_Delivery_Status__c</fullName>
    <label>Report Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>