force-app/main/default/objects/Contact/fields/Report_Eligibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Report_Eligibility_Status__c</fullName>
    <label>Report Eligibility Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Pending Consent</fullName>
            </value>
            <value>
                <fullName>Consent Declined</fullName>
            </value>
            <value>
                <fullName>Consent Withdrawn</fullName>
            </value>
            <value>
                <fullName>Consent Expired</fullName>
            </value>
            <value>
                <fullName>Consent Consumed</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>