force-app/main/default/objects/Contact/fields/Report_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Report_Request_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Report Request ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>